[tool.poetry]
name = "discord-hvz-docs"
version = "1.0"
description = "The documentation for Discord HvZ"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "discord_hvz_docs"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mike = "^2.1.3"
mkdocs-material = "^9.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
